# sap-rag-integration

./: .env.local.example  .gitignore  .mcp.json  CLAUDE.md  README.ja.md  README.ko.md  README.md  docker-compose.yml  eslint.config.mjs  installation.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
adk_agent/: .env.example  Dockerfile  agent.py  crypto.py  mcp_pubsub.py  oauth.py  probes.py  sap_auth_config.py  server.py  services.yaml  settings.py
adk_agent/rag/: db.py  embedding.py
adk_agent/tools/: auth_tool.py  entity_tool.py  query_tool.py  rag_tool.py  service_tool.py
cloud-run-oauth-callback/: Dockerfile  main.py  requirements.txt
deploy/: .env.agent-engine.example  .env.deploy.example  README.md  deploy-agent-engine.py  deploy-cloud-run.sh  schema.sql  setup-agent-engine.sh  setup-cloud-sql.sh
docs/: GUIDE.ja.md  GUIDE.ko.md  GUIDE.md
docs/en/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MCP.md  README.md  SAP_QUERY_EXAMPLES.md
docs/followups/: post-migration.md
docs/issues/: 2026-04-29-nextjs-turbopack-css-resolver-bug.md
docs/ja/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MCP.md  README.md  SAP_QUERY_EXAMPLES.md
docs/ko/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MCP.md  README.md  SAP_QUERY_EXAMPLES.md
scripts/: benchmark-rag.ts  check-adk-health.mjs  check-parent-workspace.mjs  fetch_sap_metadata.py  list_sap_services.py  setup-gcp-service-account.sh  test_pubsub_mcp_live.py
src/: proxy.ts
src/__tests__/: proxy.test.ts
src/app/: globals.css  layout.tsx
src/components/: ChatInput.tsx  ChatSidebar.tsx  ChatWindow.tsx  PipelineDashboard.tsx  SAPDataView.tsx
src/lib/: adk-client.ts  concurrency.ts  db.ts  (+11 more)
(+72 files in other folders)
