[project]
name = "sap-rag-integration"
version = "0.1.0"
description = "ADK-based RAG + SAP agent (migrated from sapphire26-google-booth-demo-rag)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk>=1.27.0,<2.0.0",
    "google-genai>=1.44.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.118.0,<2.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1b0,<1.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "pyyaml>=6.0",
    "xmltodict>=0.13.0",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiohttp>=3.9",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "structlog>=24.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.7",
    "ruff>=0.4",
    "mypy>=1.10",
    "nest-asyncio>=1.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["adk_agent/sap_gw_connector"]

[tool.ruff.lint]
select = ["E","F","W","I","B","UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=adk_agent --cov-report=term-missing --cov-fail-under=80"
testpaths = ["adk_agent/tests/unit", "adk_agent/tests/contract"]

[tool.coverage.run]
source = ["adk_agent"]
omit = [
    "adk_agent/sap_gw_connector/*",
    "adk_agent/tests/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adk_agent"]
